--- a/.github/workflows/run-codespell.yml
+++ b/.github/workflows/run-codespell.yml
@@ -15,12 +15,38 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+# Note: This workflow allows specifying a custom location for the Codespell 
+# configuration file by defining CONFIG_FILE as an input variable.  
+# Warning: Will only process "skip" and "ignore-words-list" from the codespell 
+# config file if provided.
+
 jobs:
-  reuse-workflow-run-codespell:
-    name: Run Codespell
-    if: github.run_number > 1
-    uses: ehennestad/matbox-actions/.github/workflows/codespell-workflow.yml@v1
-    with:
-      # Specify the path of a codespell config file relative to the repository 
-      # root directory
-      config_file: .codespellrc
+  codespell:
+    name: Check for spelling errors
+    runs-on: ubuntu-latest
+    env:
+      CONFIG_FILE: '.codespellrc'
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Extract codespell configurations from configuration file
+        id: config
+        run: |
+          # Extract 'skip' value from the config file, excluding 'skip = ' part
+          skip=$(grep -E '^skip' "$CONFIG_FILE" | sed 's/^skip *= *//')
+          
+          # Extract 'ignore-words-list' value from the config file, excluding 'ignore-words-list = ' part
+          ignore_words=$(grep -E '^ignore-words-list' "$CONFIG_FILE" | sed 's/^ignore-words-list *= *//')
+          
+          # Export values as environment variables
+          echo "SKIP=$skip" >> $GITHUB_ENV
+          echo "IGNORE_WORDS_LIST=$ignore_words" >> $GITHUB_ENV
+
+      - name: Codespell
+        uses: codespell-project/actions-codespell@v2
+        with:
+          skip: $SKIP
+          ignore_words_list: $IGNORE_WORDS_LIST
+          verbose: true
