--- a/.github/workflows/run-codespell.yml
+++ b/.github/workflows/run-codespell.yml
@@ -24,3 +24,4 @@ jobs:
       # Specify the path of a codespell config file relative to the repository 
       # root directory
       config_file: .codespellrc
+      verbose: true
