--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -63,3 +63,17 @@ jobs:
           badge: true
           format: markdown
           output: both
+          thresholds: '50 75'
+          
+      - name: Persist coverage summary
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-summary
+          path: reports/code-coverage-results.md
+          
+      - name: Post coverage summary as PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          recreate: true
+          path: code-coverage-results.md
