--- a/.github/workflows/test-code-new.yml
+++ b/.github/workflows/test-code-new.yml
@@ -72,7 +72,7 @@ jobs:
                 'TestsFolderName', '${{ env.TESTS_DIR }}', ...
                 'ReportSubdirectory', '', ...
                 'CreateBadge', true, ...
-                'OutputDetail', 'html');
+                'OutputDetail', 'HtmlReports');
             end
 
       - name: Publish test results
