--- a/.github/workflows/test-code-new.yml
+++ b/.github/workflows/test-code-new.yml
@@ -71,8 +71,7 @@ jobs:
                 'SourceFolderName', '${{ env.SRC_DIR }}', ...
                 'TestsFolderName', '${{ env.TESTS_DIR }}', ...
                 'ReportSubdirectory', '', ...
-                'CreateBadge', true, ...
-                'HtmlReports', true);
+                'CreateBadge', true);
             end
 
       - name: Publish test results
