--- a/.github/workflows/test-code-new.yml
+++ b/.github/workflows/test-code-new.yml
@@ -88,19 +88,12 @@ jobs:
         with:
           pr-ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.ref || github.ref_name }}
           pr-repo: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name || github.repository }}
-
-      - name: Save reports artifact
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: reports
-          path: docs/reports
   
       - name: Generate coverage summary
         id: coverage
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: reports/codecoverage.xml
+          filename: ${{ env.REPORTS_DIR }}/codecoverage.xml
           badge: true
           format: markdown
           output: both
@@ -108,18 +101,19 @@ jobs:
           fail_below_min: 'true'
         continue-on-error: true
 
-      - name: Persist coverage summary
+      - name: Save artifacts
         uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: coverage-summary
-          path: reports/code-coverage-results.md
+          name: reports
+          path: ${{ env.REPORTS_DIR }}
 
       - name: Post coverage summary as PR Comment
         uses: marocchino/sticky-pull-request-comment@v2
         if: github.event_name == 'pull_request'
         with:
           recreate: true
-          path: code-coverage-results.md    
+          path: ${{ env.REPORTS_DIR }}/code-coverage-results.md
       
       - name: Fail if coverage is too low
         if: steps.coverage.outcome == 'failure'
