limit code coverage inclusion

--- a/.github/workflows/test-code-new.yml
+++ b/.github/workflows/test-code-new.yml
@@ -55,6 +55,8 @@ jobs:
       - name: Install MatBox
         uses: ehennestad/matbox-actions/install-matbox@v1
 
+
+
       - name: Check Code for MATLAB issues
       # This performs static checks
       # Creates a "code issues" SVG badge
@@ -90,11 +92,17 @@ jobs:
             if exist("testToolbox", "file")
               testToolbox('ReportSubdirectory', '', 'CreateBadge', true, 'OutputDetail', 'html');
             else
+              files = dir(fullfile('${{ env.SRC_DIR }}', '**', '*.m'));
+              fileList = string(fullfile({files.folder}, {files.name}));
+              exclude = ["Contents.m", "gettingStarted.m", "toolboxversion.m"];
+              fileList = fileList(~ismember(string({files.name}), exclude));
+              
               matbox.tasks.testToolbox(pwd, ...
                 'SourceFolderName', '${{ env.SRC_DIR }}', ...
                 'TestsFolderName', '${{ env.TESTS_DIR }}', ...
                 'ReportSubdirectory', '', ...
-                'CreateBadge', true);
+                'CreateBadge', true, ...
+                'CoverageFileList', fileList);
             end
 
       - name: Publish test results
@@ -137,7 +145,6 @@ jobs:
         with:
           recreate: true
           path: code-coverage-results.md
-
 
       - name: Commit SVG badges if updated
         # "code issues" and "tests" SVG badges
