fix code issues, exclude toolboxdir.m

--- a/.github/workflows/test-code-new.yml
+++ b/.github/workflows/test-code-new.yml
@@ -94,7 +94,7 @@ jobs:
             else
               files = dir(fullfile('${{ env.SRC_DIR }}', '**', '*.m'));
               fileList = string(fullfile({files.folder}, {files.name}));
-              exclude = ["Contents.m", "gettingStarted.m", "toolboxversion.m"];
+              exclude = ["Contents.m", "gettingStarted.m", "toolboxversion.m", "toolboxdir.m"];
               fileList = fileList(~ismember(string({files.name}), exclude));
               
               matbox.tasks.testToolbox(pwd, ...
